clean scss, fix screen overflow issue

--- a/src/assets/scss/_utilities.scss
+++ b/src/assets/scss/_utilities.scss
@@ -9,7 +9,3 @@
 .align-items--center {
   align-items: center;
 }
-
-.justify-content--space-between {
-  justify-content: space-between;
-}
