--- a/src/components/Chart/Chart.scss
+++ b/src/components/Chart/Chart.scss
@@ -1,5 +1,4 @@
 @import "../../assets/scss/config";
-@import "../../assets/scss/utilities";
 
 .chart {
   display: block;
@@ -15,7 +14,7 @@
   }
 
   .chart__collumn {
-    width: 30px;
+    width: 1.5rem;
     border-bottom: none;
 
     &--light {
